--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=f@rdhan1426
-DB_NAME=scholarship_db
-PORT=5000
+# Sesuaikan dengan konfigurasi Anda
+DB_HOST=YOUR_DB_HOST
+DB_USER=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
+DB_NAME=YOUR_DB_NAME
+PORT=YOUR_DB_PORT
